--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "sass": "^1.47.0"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.13",
     "eslint": "8.6.0",
-    "eslint-config-next": "12.0.7"
+    "eslint-config-next": "12.0.7",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.6"
   }
 }
